@@ -71,7 +71,8 @@ void client_destroy(struct client *c);
 
 void client_set_connection(struct client *cl, struct connection *con);
 void client_disconnect(struct client *cl);
-int client_prep_connection(struct client *cl);
+int client_prep_connection(struct client *cl,
+                           int connect_timeout, int session_timeout);
 void client_start_search(struct client *cl);
 void client_set_session(struct client *cl, struct session *se);
 int client_is_active(struct client *cl);
