@@ -35,7 +35,6 @@ struct session;
 
 void connection_destroy(struct connection *co);
 void connect_resolver_host(struct host *host);
-int connection_prep_connection(struct connection *co, struct session *se);
 const char *connection_get_url(struct connection *co);
 void connection_release(struct connection *co);
 ZOOM_connection connection_get_link(struct connection *co);
