@@ -26,10 +26,7 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
 struct parameters {
     int dump_records;
     int debug_mode;
-    int session_timeout;
     int toget;
-    int z3950_session_timeout;
-    int z3950_connect_timeout;
 };
 extern struct parameters global_parameters;
 
