@@ -1,3 +1,8 @@
+Timeout values may be given per-service. That's element 'timeout' 
+which takes three attribute values (a subset may be given): 'session',
+'z3950_connect', 'z3950_session'. Option -T is no longer supported
+- used to specify session timeout.
+
 Option -t tests the Pazpar2 configuration and returns exit code
 (0=success, non-zero=failure). In previous version of Pazpar2, -t
 specified local settings.
